[NONE] Make the Dot2ZestGraphCopierTests pass on Travis/Jenkins.
- Avoid "JavaFX Application Thread" org.eclipse.swt.SWTException:
Invalid thread access Exception.